--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
+    "localStorage": "^1.0.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
