--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-form": "^8.1.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
