--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-tabs": "^3.0.0",
     "redux": "^4.0.0",
     "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
