--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-spinners": "^0.6.1",
     "react-tabs": "^3.0.0",
     "redux": "^4.0.0",
     "redux-form": "^8.1.0",
