--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
@@ -105,6 +104,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0"
   }
